# one-player-poker-ai

./: .gitignore  README.md
agent/: model.py  ppo.py  runner.py
backend/: main.py  pyproject.toml
backend/poker_env/: poker_env.py
env/: card_utils.py  poker_env.py
frontend/: tailwind.config.js
frontend/src/: App.jsx  index.css
scripts/: cactus_tester.py  play_bot.py  play_manual.py  plots.py  test_hand_evaluation.py  train.py
scripts/checkpoints/: policy_iter100.pth  policy_iter200.pth  value_iter100.pth  value_iter200.pth
scripts/checkpoints-m1/: policy.pth  policy_iter250.pth  policy_iter500.pth  policy_iter750.pth  reward_history.json  value.pth  value_iter250.pth  value_iter500.pth  value_iter750.pth
