[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Gao", email = "mgao31415@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "pydantic>=2.11.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
